[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saugat_dashboard"
version = "0.1.0"
description = "Dashboard for daily routine tracking using Google Sheets data"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Saugat Poudel"}
]

dependencies = [
    "google-auth==2.27.0",
    "google-auth-oauthlib==1.2.0",
    "google-api-python-client==2.111.0",
    "pandas==2.1.3",
    "matplotlib==3.8.2",
    "seaborn==0.13.1",
    "plotly==5.18.0",
    "dash==2.14.2",
    "python-dotenv==1.0.0",
    "streamlit==1.28.0",
]

[project.scripts]
dashboard = "src.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
